<resources>
    <string name="app_name">Taco Pronto</string>
    <string name="action_settings">Settings</string>
    <string name="btnNext">Next</string>
    <string name="beans">Beans</string>
    <string name="Beans_Price">$0.99</string>
    <string name="beef">Beef</string>
    <string name="Beef_Price">$1.99</string>
    <string name="cheese">Cheese</string>
    <string name="Cheese_Price">$1.09</string>
    <string name="chicken">Chicken</string>
    <string name="Chicken_Price">$1.25</string>
    <string name="guacamole">Guacamole</string>
    <string name="Guacamole_Price">$1.59</string>
    <string name="lbt">LBT</string>
    <string name="LBT_Price">$0.99</string>
    <string name="pico_de_gallo">Pico de Gallo</string>
    <string name="Pico_de_Gallo_Price">$0.99</string>
    <string name="rice">Rice</string>
    <string name="Rice_Price">$0.49</string>
    <string name="sea_food">Sea Food</string>
    <string name="Sea_Food_Price">$1.99</string>
    <string name="white_fish">White Fish</string>
    <string name="White_Fish_Price">$1.79</string>
    <string name="corn">Corn</string>
    <string name="Corn_Price">$0.99</string>
    <string name="flour">Flour</string>
    <string name="Flour_Price">$1.49</string>
    <string name="large">Large</string>
    <string name="Large_Price">$3.99</string>
    <string name="next_Price">Next</string>
    <string name="select_taco_size">Select Taco Size</string>
    <string name="select_tortila">Select Tortila</string>
    <string name="small">Small</string>
    <string name="Small_Price">$2.99</string>

    <string name="Soda_Price">$0.99</string>
    <string name="Oerveza_Price">$1.99</string>
    <string name="Margarita_Price">$1.99</string>
    <string name="Tequila_Price">$2.99</string>
    <string name="next">Next</string>
    <string name="tequila">Tequila</string>
    <string name="add_to_list">Add to List</string>
    <string name="margarita">Margarita</string>
    <string name="oerveza">Oerveza</string>
    <string name="soda">Soda</string>
</resources>
