<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_beverage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.csulb.edu.tacopronto.Beverage">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Beverages:" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/txtTitle">

        <RelativeLayout
            android:id="@+id/cbContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soda" />

            <TextView
                android:id="@+id/SodaPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/chkbox1"
                android:paddingTop="6dp"
                android:text="@string/Soda_Price"
                android:textAlignment="viewEnd" />

            <CheckBox
                android:id="@+id/chkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkbox1"
                android:text="@string/oerveza" />

            <TextView
                android:id="@+id/OervezaPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/SodaPrice"
                android:layout_toRightOf="@+id/chkbox2"
                android:paddingTop="15dp"
                android:text="@string/Oerveza_Price"
                android:textAlignment="viewEnd" />

            <CheckBox
                android:id="@+id/chkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkbox2"
                android:text="@string/margarita" />

            <TextView
                android:id="@+id/MargaritaPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/OervezaPrice"
                android:layout_toRightOf="@+id/chkbox3"
                android:paddingTop="15dp"
                android:text="@string/Margarita_Price"
                android:textAlignment="viewEnd" />

            <CheckBox
                android:id="@+id/chkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkbox3"
                android:text="@string/tequila" />

            <TextView
                android:id="@+id/TequilaPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/MargaritaPrice"
                android:layout_toRightOf="@+id/chkbox3"
                android:paddingTop="15dp"
                android:text="@string/Tequila_Price"
                android:textAlignment="viewEnd" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/colorPrimary"
        android:onClick="openSummaryActivity"
        android:text="@string/add_to_list"
        android:theme="@style/AppTheme.AppBarOverlay" />


</RelativeLayout>
