<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="android.csulb.edu.tacopronto.TacoSizeAndTortila">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:id="@+id/sizeAndTortila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
        <RelativeLayout
            android:id="@+id/col1"
            android:layout_width="180dp"
            android:layout_height="119dp"
            android:layout_marginLeft="30dp">
            <TextView
                android:id="@+id/txtTacoSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_taco_size" />

            <RadioGroup
                android:id="@+id/rbGroupTacoSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTacoSize">

                <RadioButton
                    android:id="@+id/rbSizeSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/small" />

                <RadioButton
                    android:id="@+id/rbSizeLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="119dp"


            android:layout_toRightOf="@id/col1">
            <TextView
                android:id="@+id/txtTortila"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_tortila" />

            <RadioGroup
                android:id="@+id/rbGroupTortila"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTortila">

                <RadioButton
                    android:id="@+id/rbCorn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/corn" />

                <RadioButton
                    android:id="@+id/rbFlour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flour" />
            </RadioGroup>
        </RelativeLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sizeAndTortila"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorPrimary"
            android:onClick="openFillingActivity"
            android:text="@string/next"
            android:theme="@style/AppTheme.AppBarOverlay" />
    </RelativeLayout>


<!--

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" />
-->



       <!-- <include layout="@layout/content_taco_size_and_tortila" />-->


</android.support.design.widget.CoordinatorLayout>
